--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,20 +21,24 @@ jobs:
           # Fetch all history to ensure 'west init' works correctly
           fetch-depth: 0
 
-      - name: Initialize West/ZMK Modules
+      - name: Initialize ZMK, Update Modules, and Setup Environment
         run: |
-          # Initialize the ZMK workspace using your config directory as the manifest
+          # 1. Initialize ZMK workspace (west init)
+          #    Use the 'config' directory as the manifest location (-l config)
           west init -l config
-          # Fetch all necessary source code
+          
+          # 2. Fetch all source code (ZMK, Zephyr, Drivers)
+          #    This step brings in the 'ZephyrConfig.cmake' file that was missing.
           west update
-
-      - name: Export ZMK Environment Variables
-        run: |
-          # Set up the necessary build path
+          
+          # 3. Export necessary environment variables for the build
+          #    'ZEPHYR_BASE' is required for the build system to find Zephyr's configuration.
+          source west.sh
           export ZEPHYR_TOOLCHAIN_VARIANT=gnuarmemb
           export GNUARMEMB_TOOLCHAIN_DIR=/usr/local/zephyr-sdk
-          # Export necessary paths for 'west build'
-          export CMAKE_PREFIX_PATH=$ZEPHYR_BASE/cmake
+          # Re-export ZEPHYR_BASE to be safe
+          export ZEPHYR_BASE=$(pwd)/zmk/zephyr
+          echo "ZEPHYR_BASE is set to: $ZEPHYR_BASE"
 
       - name: Build Firmware
         run: |
@@ -46,6 +50,6 @@ jobs:
       - name: Archive Firmware
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.BOARD }}-mediapad3-firmware
+          name: nice_nano_v2-mediapad3-firmware
           # The built .uf2 file is located here
           path: build/zephyr/zmk.uf2
