--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
           west update
           
           # 3. Export necessary environment variables for the build
-          #    CRITICAL FIX: Changed 'source west.sh' to '. west.sh'
-          . west.sh
+          #    CRITICAL FIX: Explicitly sourcing the west.sh file from the .west directory
+          . .west/west.sh
           export ZEPHYR_TOOLCHAIN_VARIANT=gnuarmemb
           export GNUARMEMB_TOOLCHAIN_DIR=/usr/local/zephyr-sdk
           # Export ZEPHYR_BASE to be safe
