--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,26 +21,25 @@ jobs:
           # Fetch all history to ensure 'west init' works correctly
           fetch-depth: 0
 
-      - name: Initialize ZMK, Update Modules, and Setup Environment
+      - name: Initialize ZMK and Update Modules
         run: |
-          # 1. Initialize ZMK workspace (west init)
+          # 1. Initialize ZMK workspace
           west init -l config
           
           # 2. Fetch all source code (ZMK, Zephyr, Drivers)
           west update
           
-          # 3. Export necessary environment variables for the build
-          #    CRITICAL FIX: Explicitly sourcing the west.sh file from the .west directory
-          . .west/west.sh
+      - name: Build Firmware
+        # We manually set the critical environment variables here
+        # This bypasses the need for the west.sh file entirely
+        run: |
+          # Set the required path to the Zephyr RTOS source code
+          export ZEPHYR_BASE="${GITHUB_WORKSPACE}/zmk/zephyr"
           export ZEPHYR_TOOLCHAIN_VARIANT=gnuarmemb
           export GNUARMEMB_TOOLCHAIN_DIR=/usr/local/zephyr-sdk
-          # Export ZEPHYR_BASE to be safe
-          export ZEPHYR_BASE=$(pwd)/zmk/zephyr
-          echo "ZEPHYR_BASE is set to: $ZEPHYR_BASE"
-
-      - name: Build Firmware
-        run: |
+          
           echo "Building firmware for nice_nano_v2 with mediapad3 shield..."
+          
           # The full west build command with explicit paths and shield definition
           west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=mediapad3 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
           echo "Build complete."
