--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,38 +20,26 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Clone ZMK and Initialize Workspace
+      - name: Initialize ZMK Workspace and Build
         run: |
-          echo "Cloning ZMK..."
-          # 1. Clone ZMK directly into the 'zmk' folder
-          git clone --depth 1 https://github.com/zmkfirmware/zmk.git $GITHUB_WORKSPACE/zmk
+          echo "Initializing ZMK workspace using local manifest..."
           
-          # 2. Change directory into the cloned ZMK repository
-          cd $GITHUB_WORKSPACE/zmk
+          # CRITICAL FIX: Initialize west using the local config folder as the manifest location.
+          # This relies on west.yml being inside the 'config' folder.
+          west init -l config
           
-          # CRITICAL FIX: Manually copy the manifest file from its TRUE location (zephyr/west.yml)
-          mkdir -p .west
-          cp zephyr/west.yml .west/
-          
-          # 3. Run West Init from INSIDE the cloned ZMK folder (now with the manifest available)
-          west init -l .
-          
-          # 4. Update modules
+          # Fetch all source code
           west update
           
-          # 5. Create symlink back to your config directory
-          ln -s $GITHUB_WORKSPACE/config $GITHUB_WORKSPACE/zmk/config
+          # Set ZEPHYR_BASE for the build (necessary for older ZMK container)
+          export ZEPHYR_BASE=$GITHUB_WORKSPACE/zmk/zephyr
           
-      - name: Build Firmware
-        run: |
           echo "Building firmware for nice_nano_v2 with mediapad3 shield..."
           
-          # Change directory to the ZMK app root before building
-          cd $GITHUB_WORKSPACE/zmk/app
-          
           # The full west build command
-          west build -b nice_nano_v2 -- \
-            -DSHIELD=mediapad3
+          west build -s zmk/app -b nice_nano_v2 -- \
+            -DSHIELD=mediapad3 \
+            -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
           
           echo "Build complete."
 
@@ -59,5 +47,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: nice_nano_v2-mediapad3-firmware
-          # The built .uf2 file is located here (relative to the build directory)
+          # The built .uf2 file is located here
           path: build/zephyr/zmk.uf2
