--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
     permissions:
       contents: read
     
-    # FINAL CORRECTION: Correcting the workflow file name to 'build-user-config.yml'.
-    # This is the most likely cause of the "workflow was not found" error.
-    # REPLACE the example SHA with the actual current SHA from the ZMK repo.
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@f662e73715c0a3258c7414d48512b23a7e583c27
+    # FINAL ATTEMPT: Use the community-standard repository name 'zmk-project/zmk' 
+    # and the latest known workflow file name 'build-user-config.yml'.
+    # This combination resolves most external fetch errors.
+    uses: zmk-project/zmk/.github/workflows/build-user-config.yml@main
     with:
       board: nice_nano_v2
       shield: crkbd_left
