--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,13 @@ jobs:
         with:
           fetch-depth: 0 
           
-      - name: ⚙️ Manual Git Clone and Environment Setup (No west update)
+      - name: ⚙️ Manual Git Clone and Environment Setup (Final Fix)
         run: |
-          # --- Dependencies and Versions (Hardcoded from ZMK v0.3 Manifest) ---
-          # These SHAs/Tags are known stable for the ZMK v0.3 release line.
-          ZEPHYR_REVISION="zephyr-v2.6.99"
-          MCUB_REVISION="mcuboot-1.7.99"
+          # --- Dependencies and Versions (Corrected) ---
+          # ZMK v0.3 uses Zephyr v2.6.0 and an older MCUBoot tag.
+          # RESOLUTION: Corrected the non-existent Zephyr tag.
+          ZEPHYR_REVISION="v2.6.0" 
+          MCUB_REVISION="v1.7.0"
           ZMK_REVISION="v0.3" 
 
           # 1. Create the base ZMK structure
@@ -40,26 +41,22 @@ jobs:
           echo "--- 2. Cloning ZMK App (Path: zmk/app) ---"
           git clone --depth 1 --branch $ZMK_REVISION https://github.com/zmkfirmware/zmk.git $GITHUB_WORKSPACE/zmk/app || exit 1
           
-          # 3. Clone Zephyr (The main RTOS)
+          # 3. Clone Zephyr (The main RTOS) - USES CORRECTED TAG
           echo "--- 3. Cloning Zephyr RTOS (Path: zmk/zephyr) ---"
           git clone --depth 1 --branch $ZEPHYR_REVISION https://github.com/zephyrproject-rtos/zephyr.git $GITHUB_WORKSPACE/zmk/zephyr || exit 1
 
-          # 4. Clone MCUBoot (Required Bootloader)
+          # 4. Clone MCUBoot (Required Bootloader) - USES CORRECTED TAG
           echo "--- 4. Cloning MCUBoot (Path: zmk/bootloader/mcuboot) ---"
           git clone --depth 1 --branch $MCUB_REVISION https://github.com/mcu-tools/mcuboot.git $GITHUB_WORKSPACE/zmk/bootloader/mcuboot || exit 1
 
-          # 5. Export Zephyr Environment (Replaces sourcing zephyr-env.sh)
-          # 'west zephyr-export' uses the cloned Zephyr repo to set the necessary environment variables.
+          # 5. Export Zephyr Environment (Sets required environment variables)
           echo "--- 5. Exporting Zephyr Environment Variables ---"
           export ZEPHYR_BASE="$GITHUB_WORKSPACE/zmk/zephyr"
           west zephyr-export || { echo "FATAL: Zephyr export failed. Check paths."; exit 1; }
 
           # 6. Build
           echo "--- 6. Starting Final West Build ---"
-          # Navigate into the ZMK application root for the build command
           cd $GITHUB_WORKSPACE/zmk/app || exit 1
-
-          # Build using the now-established environment variables
           west build -b nice_nano_v2 -- -DSHIELD=crkbd_left -DZMK_CONFIG=$GITHUB_WORKSPACE/config || { echo "FATAL: Build failed. Check config and keymaps."; exit 1; }
           
       - name: ⬆️ Upload Artifacts
@@ -67,5 +64,4 @@ jobs:
         if: success()
         with:
           name: zmk-firmware
-          # Path is relative to the directory where 'west build' ran ($GITHUB_WORKSPACE/zmk/app)
           path: zmk/app/build/zephyr/zmk.uf2
